[gd_scene load_steps=13 format=2]

[ext_resource path="res://Bullets/img/bglb.jpg" type="Texture" id=1]
[ext_resource path="res://Bullets/fonts/calibril.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Bullets/fonts/SlideTitleFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Bullets/components/ContentBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Bullets/Slides/BOneContent.gd" type="Script" id=5]
[ext_resource path="res://Bullets/components/matrix.gd" type="Script" id=6]
[ext_resource path="res://Bullets/fonts/calibri font sv/Calibri Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="RichTextEffect" id=2]
script = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=4]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.588235 ) ]
}

[node name="OneContent" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceInfoLabel" type="RichTextLabel" parent="."]
margin_left = 110.0
margin_top = 960.0
margin_right = 1868.0
margin_bottom = 1089.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="RichTextLabel" parent="."]
margin_left = 110.0
margin_top = 71.0
margin_right = 1822.0
margin_bottom = 144.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=#ff000000][/color]"
custom_effects = [ SubResource( 2 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentLabel" parent="." instance=ExtResource( 4 )]

[node name="PageNumber" type="RichTextLabel" parent="."]
margin_left = 1802.92
margin_top = 1021.27
margin_right = 1842.92
margin_bottom = 1061.27
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 4 )
anims/FadeOut = SubResource( 5 )
